Tidy up Felix metrics; add NFLOG metrics.

--- a/calico-enterprise/reference/component-resources/node/felix/prometheus.mdx
+++ b/calico-enterprise/reference/component-resources/node/felix/prometheus.mdx
@@ -16,66 +16,82 @@ are tied to particular implementation choices inside Felix we can't make any har
 metrics will persist across releases. However, we aim not to make any spurious changes to
 existing metrics.
 
-| Name                                                       | Description                                                                                                                                               |
-| ---------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `felix_active_local_endpoints`                             | Number of active endpoints on this host.                                                                                                                  |
-| `felix_active_local_policies`                              | Number of active policies on this host.                                                                                                                   |
-| `felix_active_local_selectors`                             | Number of active selectors on this host.                                                                                                                  |
-| `felix_active_local_tags`                                  | Number of active tags on this host.                                                                                                                       |
-| `felix_bpf_conntrack_cleaned`                              | Number of entries cleaned during a conntrack table sweep.                                                                                                 |
-| `felix_bpf_conntrack_cleaned_total`                        | Total number of entries cleaned during conntrack table sweeps, incremented for each clean individually.                                                   |
-| `felix_bpf_conntrack_expired`                              | Number of entries cleaned during a conntrack table sweep due to expiration.                                                                               |
-| `felix_bpf_conntrack_expired_total`                        | Total number of entries cleaned during conntrack table sweep due to expiration - by reason.                                                               |
-| `felix_bpf_conntrack_inforeader_blocks`                    | Conntrack InfoReader would-blocks.                                                                                                                        |
-| `felix_bpf_conntrack_stale_nat`                            | Number of entries cleaned during a conntrack table sweep due to stale NAT.                                                                                |
-| `felix_bpf_conntrack_stale_nat_total`                      | Total number of entries cleaned during conntrack table sweeps due to stale NAT.                                                                           |
-| `felix_bpf_conntrack_sweeps`                               | Number of conntrack table sweeps made so far.                                                                                                             |
-| `felix_bpf_conntrack_used`                                 | Number of used entries visited during a conntrack table sweep.                                                                                            |
-| `felix_bpf_conntrack_sweep_duration`                       | Conntrack sweep execution time (ns).                                                                                                                      |
-| `felix_bpf_num_ip_sets`                                    | Number of BPF IP sets managed in the dataplane.                                                                                                           |
-| `felix_calc_graph_output_events`                           | Number of events emitted by the calculation graph.                                                                                                        |
-| `felix_calc_graph_update_time_seconds`                     | Seconds to update calculation graph for each datastore OnUpdate call.                                                                                     |
-| `felix_calc_graph_updates_processed`                       | Number of datastore updates processed by the calculation graph.                                                                                           |
-| `felix_cluster_num_host_endpoints`                         | Total number of host endpoints cluster-wide.                                                                                                              |
-| `felix_cluster_num_hosts`                                  | Total number of {{prodname}} hosts in the cluster.                                                                                                        |
-| `felix_cluster_num_policies`                               | Total number of policies in the cluster.                                                                                                                  |
-| `felix_cluster_num_profiles`                               | Total number of profiles in the cluster.                                                                                                                  |
-| `felix_cluster_num_tiers`                                  | Total number of {{prodname}} tiers in the cluster.                                                                                                        |
-| `felix_cluster_num_workload_endpoints`                     | Total number of workload endpoints cluster-wide.                                                                                                          |
-| `felix_egress_gateway_remote_polls{status="total"}`        | Total number of remote egress gateway pods that Felix is polling for health/connectivity. Only egress gateways with a named "health" port will be polled. |
-| `felix_egress_gateway_remote_polls{status="up"}`           | Total number of remote egress gateway pods that have successful probes.                                                                                   |
-| `felix_egress_gateway_remote_polls{status="probe-failed"}` | Total number of remote egress gateway pods that have failed probes.                                                                                       |
-| `felix_exec_time_micros`                                   | Summary of time taken to fork/exec child processes                                                                                                        |
-| `felix_int_dataplane_addr_msg_batch_size`                  | Number of interface address messages processed in each batch. Higher values indicate we're doing more batching to try to keep up.                         |
-| `felix_int_dataplane_apply_time_seconds`                   | Time in seconds that it took to apply a dataplane update.                                                                                                 |
-| `felix_int_dataplane_failures`                             | Number of times dataplane updates failed and will be retried.                                                                                             |
-| `felix_int_dataplane_iface_msg_batch_size`                 | Number of interface state messages processed in each batch. Higher values indicate we're doing more batching to try to keep up.                           |
-| `felix_int_dataplane_messages`                             | Number dataplane messages by type.                                                                                                                        |
-| `felix_int_dataplane_msg_batch_size`                       | Number of messages processed in each batch. Higher values indicate we're doing more batching to try to keep up.                                           |
-| `felix_ipsec_bindings_total`                               | Total number of ipsec bindings.                                                                                                                           |
-| `felix_ipsec_errors`                                       | Number of ipsec command failures.                                                                                                                         |
-| `felix_ipset_calls`                                        | Number of ipset commands executed.                                                                                                                        |
-| `felix_ipset_errors`                                       | Number of ipset command failures.                                                                                                                         |
-| `felix_ipset_lines_executed`                               | Number of ipset operations executed.                                                                                                                      |
-| `felix_ipsets_calico`                                      | Number of active {{prodname}} IP sets.                                                                                                                    |
-| `felix_ipsets_total`                                       | Total number of active IP sets.                                                                                                                           |
-| `felix_iptables_chains`                                    | Number of active iptables chains.                                                                                                                         |
-| `felix_iptables_lines_executed`                            | Number of iptables rule updates executed.                                                                                                                 |
-| `felix_iptables_lock_acquire_secs`                         | Time taken to acquire the iptables lock.                                                                                                                  |
-| `felix_iptables_lock_retries`                              | Number of times the iptables lock was already held and felix had to retry to acquire it.                                                                  |
-| `felix_iptables_restore_calls`                             | Number of iptables-restore calls.                                                                                                                         |
-| `felix_iptables_restore_errors`                            | Number of iptables-restore errors.                                                                                                                        |
-| `felix_iptables_rules`                                     | Number of active iptables rules.                                                                                                                          |
-| `felix_iptables_save_calls`                                | Number of iptables-save calls.                                                                                                                            |
-| `felix_iptables_save_errors`                               | Number of iptables-save errors.                                                                                                                           |
-| `felix_log_errors`                                         | Number of errors encountered while logging.                                                                                                               |
-| `felix_logs_dropped`                                       | Number of logs dropped because the output stream was blocked.                                                                                             |
-| `felix_reporter_log_errors`                                | Number of errors encountered while logging in the Syslog.                                                                                                 |
-| `felix_reporter_logs_dropped`                              | Number of logs dropped because the output was blocked in the Syslog reporter.                                                                         |
-| `felix_resync_state`                                       | Current datastore state.                                                                                                                                  |
-| `felix_resyncs_started`                                    | Number of times Felix has started resyncing with the datastore.                                                                                           |
-| `felix_route_table_list_seconds`                           | Time taken to list all the interfaces during a resync.                                                                                                    |
-| `felix_route_table_per_iface_sync_seconds`                 | Time taken to sync each interface                                                                                                                         |
+| Name                                                       | Description                                                                                                                                                         |
+|------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| ** Cluster-wide metrics **                                 |                                                                                                                                                                     |
+| `felix_cluster_num_host_endpoints`                         | Total number of host endpoints cluster-wide.                                                                                                                        |
+| `felix_cluster_num_hosts`                                  | Total number of {{prodname}} hosts in the cluster.                                                                                                                  |
+| `felix_cluster_num_policies`                               | Total number of policies in the cluster.                                                                                                                            |
+| `felix_cluster_num_profiles`                               | Total number of profiles in the cluster.                                                                                                                            |
+| `felix_cluster_num_tiers`                                  | Total number of {{prodname}} tiers in the cluster.                                                                                                                  |
+| `felix_cluster_num_workload_endpoints`                     | Total number of workload endpoints cluster-wide.                                                                                                                    |
+| ** General metrics **                                      |                                                                                                                                                                     |
+| `felix_active_local_endpoints`                             | Number of active endpoints (workload+host) on this host.                                                                                                            |
+| `felix_active_local_policies`                              | Number of active policies on this host.  Only "active" policies that match a local endpoint have a significant cost.                                                |
+| `felix_active_local_selectors`                             | Number of active selectors on this host.  Only "active" rule src/dest selectors have significant cost.                                                              |
+| `felix_exec_time_micros`                                   | Summary of time taken to fork/exec child processes.                                                                                                                 |
+| `felix_log_errors`                                         | Number of errors encountered while making normal "process" logs (for example to stdout).                                                                            |
+| `felix_logs_dropped`                                       | Number of logs dropped because the output stream was blocked.                                                                                                       |
+| ** Calculation graph  **                                   |                                                                                                                                                                     |
+| `felix_calc_graph_output_events`                           | Number of events emitted by the calculation graph.                                                                                                                  |
+| `felix_calc_graph_update_time_seconds`                     | Seconds to update calculation graph for each datastore OnUpdate call.                                                                                               |
+| `felix_calc_graph_updates_processed`                       | Number of datastore updates processed by the calculation graph.                                                                                                     |
+| ** General dataplane **                                    | _Metrics shared by all of Felix's "internal" dataplanes.  (The VPP dataplane is "external", it runs outside the Felix process.)_                                    |
+| `felix_resyncs_started`                                    | Number of times Felix has started resyncing with the datastore.  (Not meaningful in a Typha deployment.)                                                            |
+| `felix_resync_state`                                       | Current datastore-dataplane synchronisation state, encoded as a number 1="waiting for datastore", 2="resync in progress", 3="in sync with datastore".               |
+| `felix_int_dataplane_addr_msg_batch_size`                  | Number of interface address messages processed in each batch. Higher values indicate we're doing more batching to try to keep up.                                   |
+| `felix_int_dataplane_apply_time_seconds`                   | Time in seconds that it took to apply a dataplane update.                                                                                                           |
+| `felix_int_dataplane_failures`                             | Number of times dataplane updates failed and will be retried.                                                                                                       |
+| `felix_int_dataplane_iface_msg_batch_size`                 | Number of interface state messages processed in each batch. Higher values indicate we're doing more batching to try to keep up.                                     |
+| `felix_int_dataplane_messages`                             | Number dataplane messages by type.                                                                                                                                  |
+| `felix_int_dataplane_msg_batch_size`                       | Number of messages processed in each batch. Higher values indicate we're doing more batching to try to keep up.                                                     |
+| `felix_route_table_list_seconds`                           | Time taken to list all the interfaces during a resync.                                                                                                              |
+| `felix_route_table_per_iface_sync_seconds`                 | Time taken to sync each interface                                                                                                                                   |
+| ** iptables dataplane **                                   |                                                                                                                                                                     |
+| `felix_iptables_chains`                                    | Number of active iptables chains.                                                                                                                                   |
+| `felix_iptables_lines_executed`                            | Number of iptables rule updates executed.                                                                                                                           |
+| `felix_iptables_lock_acquire_secs`                         | Time taken to acquire the iptables lock.                                                                                                                            |
+| `felix_iptables_lock_retries`                              | Number of times the iptables lock was already held and felix had to retry to acquire it.                                                                            |
+| `felix_iptables_restore_calls`                             | Number of iptables-restore calls.                                                                                                                                   |
+| `felix_iptables_restore_errors`                            | Number of iptables-restore errors.                                                                                                                                  |
+| `felix_iptables_rules`                                     | Number of active iptables rules.                                                                                                                                    |
+| `felix_iptables_save_calls`                                | Number of iptables-save calls.                                                                                                                                      |
+| `felix_iptables_save_errors`                               | Number of iptables-save errors.                                                                                                                                     |
+| ** BPF dataplane **                                        |                                                                                                                                                                     |
+| `felix_bpf_conntrack_cleaned`                              | Number of entries cleaned during a conntrack table sweep.                                                                                                           |
+| `felix_bpf_conntrack_cleaned_total`                        | Total number of entries cleaned during conntrack table sweeps, incremented for each clean individually.                                                             |
+| `felix_bpf_conntrack_expired`                              | Number of entries cleaned during a conntrack table sweep due to expiration.                                                                                         |
+| `felix_bpf_conntrack_expired_total`                        | Total number of entries cleaned during conntrack table sweep due to expiration - by reason.                                                                         |
+| `felix_bpf_conntrack_inforeader_blocks`                    | Conntrack InfoReader would-blocks.                                                                                                                                  |
+| `felix_bpf_conntrack_stale_nat`                            | Number of entries cleaned during a conntrack table sweep due to stale NAT.                                                                                          |
+| `felix_bpf_conntrack_stale_nat_total`                      | Total number of entries cleaned during conntrack table sweeps due to stale NAT.                                                                                     |
+| `felix_bpf_conntrack_sweeps`                               | Number of conntrack table sweeps made so far.                                                                                                                       |
+| `felix_bpf_conntrack_used`                                 | Number of used entries visited during a conntrack table sweep.                                                                                                      |
+| `felix_bpf_conntrack_sweep_duration`                       | Conntrack sweep execution time (ns).                                                                                                                                |
+| `felix_bpf_num_ip_sets`                                    | Number of BPF IP sets managed in the dataplane.                                                                                                                     |
+| ** Egress gateway function **                              |                                                                                                                                                                     |
+| `felix_egress_gateway_remote_polls{status="total"}`        | Total number of remote egress gateway pods that Felix is polling for health/connectivity. Only egress gateways with a named "health" port will be polled.           |
+| `felix_egress_gateway_remote_polls{status="up"}`           | Total number of remote egress gateway pods that have successful probes.                                                                                             |
+| `felix_egress_gateway_remote_polls{status="probe-failed"}` | Total number of remote egress gateway pods that have failed probes.                                                                                                 |
+| ** IPsec function **                                       |                                                                                                                                                                     |
+| `felix_ipsec_bindings_total`                               | Total number of ipsec bindings.                                                                                                                                     |
+| `felix_ipsec_errors`                                       | Number of ipsec command failures.                                                                                                                                   |
+| `felix_ipset_calls`                                        | Number of ipset commands executed.                                                                                                                                  |
+| `felix_ipset_errors`                                       | Number of ipset command failures.                                                                                                                                   |
+| `felix_ipset_lines_executed`                               | Number of ipset operations executed.                                                                                                                                |
+| `felix_ipsets_calico`                                      | Number of active {{prodname}} IP sets.                                                                                                                              |
+| `felix_ipsets_total`                                       | Total number of active IP sets.                                                                                                                                     |
+| ** NFLOG reader **                                         | _Low level component that receives messages from the kernel when packets hit certain iptables rules.  Used to collect policy verdicts, and DNS packets._            |
+| `felix_nflog_netlink_messages_received`                    | Total number of NFLOG "envelope" messages received from the kernel, broken down by NFLOG group.  Each envelope message holds one or more NFLOGs.                    |
+| `felix_nflog_logs_received`                                | Total number of NFLOG logs received from the kernel, broken down by NFLOG group.  NFLOG messages are sent from the kernel for each policy verdict and for DNS logs. |
+| `felix_nflog_buffer_overruns`                              | Total number of times the kernel had to drop NFLOG messages because the kernel-to-Felix buffer was full.                                                            |
+| `felix_nflog_block_time_seconds`                           | Total amount of time the NFLOG reader spent blocking waiting to send data to the "NFLOG aggregator".                                                                |
+| `felix_nflog_parse_errors`                                 | Total number of errors encountered when trying to parse NFLOG messages.                                                                                             |
+| `felix_nflog_aggregates_created`                           | Total number of NFLOG "aggregates" created.  Aggregates combine NFLOG messages that share the same 5-tuple before passing to the "collector".                       |
+| `felix_nflog_aggregates_flushed`                           | Total number of NFLOG "aggregates" flushed to the "collector".  The difference between this value and the "created" value shows how many aggregates are pending.    |
+| ** Flow logs reporter **                                   |                                                                                                                                                                     |
+| `felix_reporter_log_errors`                                | Number of errors encountered while logging (flow logs) to Syslog.                                                                                                   |
+| `felix_reporter_logs_dropped`                              | Number of flow logs dropped because the output was blocked in the Syslog reporter.                                                                                  |
 
 Prometheus metrics are self-documenting, with metrics turned on, `curl` can be used to list the
 metrics along with their help text and type information.
@@ -177,7 +193,7 @@ Felix also exports the default set of metrics that Prometheus makes available. C
 include:
 
 | Name                               | Description                                                                                 |
-| ---------------------------------- | ------------------------------------------------------------------------------------------- |
+|------------------------------------|---------------------------------------------------------------------------------------------|
 | `go_gc_duration_seconds`           | A summary of the GC invocation durations.                                                   |
 | `go_goroutines`                    | Number of goroutines that currently exist.                                                  |
 | `go_info`                          | Go version.                                                                                 |
@@ -219,7 +235,7 @@ include:
 Felix also exports wireguard device stats if found/detected. Can be disabled via Felix configuration.
 
 | Name                                 | Description                                                                                       |
-| ------------------------------------ | ------------------------------------------------------------------------------------------------- |
+|--------------------------------------|---------------------------------------------------------------------------------------------------|
 | `wireguard_meta`                     | Gauge. Device / interface information for a felix/calico node, values are in this metric's labels |
 | `wireguard_bytes_rcvd`               | Counter. Current bytes received from a peer identified by a peer public key and endpoint          |
 | `wireguard_bytes_sent`               | Counter. Current bytes sent to a peer identified by a peer public key and endpoint                |
