--- a/calico_versioned_docs/version-3.27/getting-started/bare-metal/installation/binary-mgr.mdx
+++ b/calico_versioned_docs/version-3.27/getting-started/bare-metal/installation/binary-mgr.mdx
@@ -44,7 +44,7 @@ sudo apt-get install calico-felix
 _RPM requires_: RedHat 7-derived distribution
 
 <CodeBlock language='bash'>
-cat > /etc/yum.repos.d/calico.repo <<EOF
+cat > /etc/yum.repos.d/calico.repo \<\<EOF
 [calico]
 name=Calico Repository
 baseurl=http://binaries.projectcalico.org/rpm/{variables.ppa_repo_name}/
