--- a/calico/getting-started/kubernetes/vpp/getting-started.mdx
+++ b/calico/getting-started/kubernetes/vpp/getting-started.mdx
@@ -191,7 +191,7 @@ DPDK provides better performance compared to the standard install but it require
 4. Finally, time to add nodes to the cluster. Since we need to customize the nodes for DPDK, we will use an `eksctl` config file with the `preBootstrapCommands` property to create the worker nodes. The following command will create a managed nodegroup with 2 t3.large worker nodes in the cluster:
 
    <CodeBlock language=''>
-   cat <<EOF | eksctl create nodegroup -f -
+   cat \<\<EOF | eksctl create nodegroup -f -
    apiVersion: eksctl.io/v1alpha5
    kind: ClusterConfig
    metadata:
