--- a/calico-cloud/threat/deploying-waf-ingress-gateway.mdx
+++ b/calico-cloud/threat/deploying-waf-ingress-gateway.mdx
@@ -47,7 +47,7 @@ Create an IstioOperator custom resource to enable custom sidecar injection.
 Use the provided IstioOperator definition as a starting point:
 
 <CodeBlock language='bash'>
-kubectl apply -f - <<EOF
+kubectl apply -f - \<\<EOF
 apiVersion: install.istio.io/v1alpha1
 kind: IstioOperator
 metadata:
