--- a/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/windows-calico/demo.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/getting-started/install-on-clusters/windows-calico/demo.mdx
@@ -116,7 +116,7 @@ EOF
 Next, we'll create the porter server pod:
 
 <CodeBlock language='bash'>
-kubectl apply -f - <<EOF
+kubectl apply -f - \<\<EOF
 apiVersion: v1
 kind: Pod
 metadata:
