--- a/calico_versioned_docs/version-3.28/getting-started/kubernetes/windows-calico/demo.mdx
+++ b/calico_versioned_docs/version-3.28/getting-started/kubernetes/windows-calico/demo.mdx
@@ -116,7 +116,7 @@ EOF
 Next, we'll create the porter server pod:
 
 <CodeBlock language='bash'>
-kubectl apply -f - <<EOF
+kubectl apply -f - \<\<EOF
 apiVersion: v1
 kind: Pod
 metadata:
