--- a/calico_versioned_docs/version-3.28/getting-started/kubernetes/windows-calico/manual-install/standard.mdx
+++ b/calico_versioned_docs/version-3.28/getting-started/kubernetes/windows-calico/manual-install/standard.mdx
@@ -34,7 +34,7 @@ Extend your Kubernetes deployment to Windows environments.
 
   <CodeBlock language=''>
   Invoke-WebRequest {variables.calicoReleasesURL}/{variables.releaseTitle}/install-calico-windows.ps1 -OutFile c:\install-calico-windows.ps1
-  c:\install-calico-windows.ps1 -DownloadOnly yes -KubeVersion <your Kubernetes version>
+  c:\install-calico-windows.ps1 -DownloadOnly yes -KubeVersion \<your Kubernetes version>
   </CodeBlock>
 
   cd into `{variables.rootDirWindows}`, you will see the calico-node.exe binary, install scripts, and other files.
