--- a/calico-enterprise_versioned_docs/version-3.20-1/_includes/content/_non-cluster-binary-install.mdx
+++ b/calico-enterprise_versioned_docs/version-3.20-1/_includes/content/_non-cluster-binary-install.mdx
@@ -23,7 +23,7 @@ This step requires Docker, but it can be run from any machine with Docker instal
 
    <CodeBlock language=''>
    REPOSITORY       TAG           IMAGE ID       CREATED         SIZE
-   {variables.registry}{variables.releases[0].components.cnx-node.image}      {variables.releases[0].components.cnx-node.version}        e07d59b0eb8a   2 minutes ago   42MB
+   {variables.registry}{variables.releases[0].components['cnx-node'].image}      {variables.releases[0].components['cnx-node'].version}        e07d59b0eb8a   2 minutes ago   42MB
    </CodeBlock>
 
 1. Create a temporary {variables.nodecontainer} container.
