--- a/calico-enterprise/reference/host-endpoints/summary.mdx
+++ b/calico-enterprise/reference/host-endpoints/summary.mdx
@@ -1,10 +1,9 @@
 ---
 description: How different host endpoint rules affect packet flows.
+title: Summary of host endpoint policies
 ---
 
-# Summary
-
-## When do host endpoint policies apply?
+# Summary of host endpoint policies
 
 Normal host endpoint policies apply to traffic that arrives on
 and/or is sent to a host interface, but the rules for applying untracked and
