--- a/calico-enterprise/visibility/get-started-cem.mdx
+++ b/calico-enterprise/visibility/get-started-cem.mdx
@@ -31,59 +31,7 @@ Service Graph provides a point-to-point, topographical representation of network
 
 ![service-graph](/img/calico-enterprise/service-graph.png)
 
-**Namespaces**
-
-Namespaces are the default view in Service Graph.
-
-When you expand the top right panel `<<`, you see a detailed view of the service-to-service communications for the namespace.
-
-![service-graph-namespace](/img/calico-enterprise/service-graph-namespace.png)
-
-**Nodes and edges**
-
-Lines going to/from nodes are called edges. When you click on a node or edge, the right panel shows details, and the associated flow logs are automatically filtered in the bottom panel.
-
-![edges](/img/calico-enterprise/edges.png)
-
-**Layers**
-
-Layers allow you to create meaningful groupings of resources so you can easily hide and show them on the graph. For example, you can group resources for different platform infrastructure types in your cluster like networking, storage, and logging.
-
-> Click the panel on the left (`>>`) by the Namespaces breadcrumb, and then expand the Tigera components layer.
-
-![service-graph-layers](/img/calico-enterprise/service-graph-layers.png)
-
-The **Tigera components** layer contains namespaces for {{prodname}} networking components, and is a view of interest to Dev/Ops.
-
-> Click the vertical ellipses and select, **Hide layer**. Notice that only the business application namespaces remain visible in the graph.
-
-> To make this layer less visible, select **Restore layer** and click **De-emphasize layer**.
-
-**Logs, alerts, and capture jobs**
-
-The panel at the bottom below the graph provides tools for troubleshooting connectivity and performance issues. **Logs** (Flows, DNS, and HTTP) are the foundation of security and observability in {{prodname}}. When you select a node or edge in the graph, logs are filtered for the node or service. For example, here is a flow log with details including how the policies were processed in tiers.
-
-![service-graph-flows](/img/calico-enterprise/service-graph-flows.png)
-
-**Alerts**
-
-For convenience, the Alerts tab duplicates the alerts you have enabled in the **Alerts tab** in the left navbar. By default, alerts are not enabled.
-
-**Capture jobs**
-
-Service Graph integrates a packet feature for capturing traffic for a specific namespace, service, replica set, daemonset, statefulset, or pod. You can then download capture files to your favorite visualization tool like WireShark.
-
-> Right-click on any endpoint to start or schedule a capture.
-
-![packet-capture-service](/img/calico-enterprise/packet-capture-service.png)
-
-**Flow Visualizations**
-
-> From the left navbar, select **Service Graph**, **Flow Visualizations**.
-
-Flow Visualizer (also called, "FlowViz") is a {{prodname}} tool for drilling down into network traffic within the cluster to troubleshoot issues. The most common use of Flow Visualizer is to drill down and pinpoint which policies are allowing and denying traffic between services.
-
-![flow-viz](/img/calico-enterprise/flow-viz.png)
+To learn more about Service Graph, see [Network visualization](visualize-traffic.mdx).
 
 ## Policies
 
