--- a/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.18-2/release-notes/index.mdx
@@ -243,3 +243,18 @@ No other components have been changed.
 
 To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
 
+### Calico Enterprise 3.18.5 bug fix release
+
+August 16, 2024
+
+Calico Enterprise 3.18.5 is now available. This release includes bug fixes and improvements.
+
+#### Bug fixes
+
+* one
+* two
+* three
+
+#### Updating
+
+To update an existing installation of {{prodname}} 3.18, see [Install a patch release](../getting-started/manifest-archive.mdx).
