--- a/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-automated.mdx
+++ b/calico-cloud_versioned_docs/version-19-2/get-started/connect/install-automated.mdx
@@ -96,7 +96,7 @@ These commands can be added to any automated workflow.
     # clusterName is the unique name this cluster will have in Calico Cloud
     clusterName: my-cluster
     # calicoCloudVersion is the version to install
-    calicoCloudVersion: v19.1.0
+    calicoCloudVersion: {{cloudUserVersion}}
     EOF
     ```
     </TabItem>
@@ -108,7 +108,7 @@ These commands can be added to any automated workflow.
     # installer.clusterName is the unique name this cluster will have in Calico Cloud
     --set installer.clusterName=my-cluster \
     # installer.calicoCloudVersion is the version to install
-    --set installer.calicoCloudVersion=v19.1.0
+    --set installer.calicoCloudVersion={{cloudUserVersion}}
     ```
 
     </TabItem>
